--- a/ui/style.css
+++ b/ui/style.css
@@ -20,3 +20,14 @@ body {
     height: 200px;
 }
 
+.contain{
+                padding: 60px;
+                font-size: medium;
+                color: cornflowerblue;
+            }
+.container{padding-left: 60px;
+                       padding-right: 90px;
+                       font-style: italic;
+                       font-family: sans-serif;
+                       color: chocolate;
+            }
